Add POST /vehicles/{NAME}/commAdapter/position web API endpoint
Adds a new REST endpoint to set a vehicle's initial position via its
comm adapter, equivalent to the position selector in the
KernelControlCenter driver panel. The endpoint sends an
initPosition comm adapter message with the supplied point name.

Also fixes pre-existing SonarQube issues in the touched files:
- Extract duplicate string literals into constants
- Use Stream.toList() instead of Collectors.toList()
- Reduce cognitive complexity via helper method extraction
- Guard conditional log argument evaluation with isInfoEnabled()
- Remove spurious checked exception declarations
- Fix S5778 (multiple throwable calls in assertThatExceptionOfType lambdas)

Co-Authored-By: Claude Sonnet 4.6 (1M context) <noreply@anthropic.com>