@@ -11,7 +11,6 @@ import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 import org.opentcs.components.kernel.services.InternalVehicleService;
@@ -42,6 +41,9 @@ import org.opentcs.kernel.extensions.servicewebapi.v1.converter.VehicleConverter
  * Handles requests related to vehicles.
  */
 public class VehicleHandler {
+
+  private static final String UNKNOWN_VEHICLE = "Unknown vehicle: ";
+  private static final String PARAM_VALUE = "value";
 
   private final InternalVehicleService vehicleService;
   private final RouterService routerService;
@@ -91,7 +93,7 @@ public class VehicleHandler {
           .filter(Filters.vehicleWithProcState(pState))
           .map(vehicleConverter::toGetVehicleResponseTO)
           .sorted(Comparator.comparing(GetVehicleResponseTO::getName))
-          .collect(Collectors.toList());
+          .toList();
     });
   }
 
@@ -106,22 +108,22 @@ public class VehicleHandler {
       throws ObjectUnknownException {
     requireNonNull(name, "name");
 
-    return executorWrapper.callAndWait(() -> {
-      return vehicleService.fetch(Vehicle.class, name)
-          .map(vehicleConverter::toGetVehicleResponseTO)
-          .orElseThrow(() -> new ObjectUnknownException("Unknown vehicle: " + name));
-    });
+    return executorWrapper.callAndWait(
+        () -> vehicleService.fetch(Vehicle.class, name)
+            .map(vehicleConverter::toGetVehicleResponseTO)
+            .orElseThrow(() -> new ObjectUnknownException(UNKNOWN_VEHICLE + name))
+    );
   }
 
   public void putVehicleIntegrationLevel(String name, String value)
       throws ObjectUnknownException,
         IllegalArgumentException {
     requireNonNull(name, "name");
-    requireNonNull(value, "value");
+    requireNonNull(value, PARAM_VALUE);
 
     executorWrapper.callAndWait(() -> {
       Vehicle vehicle = vehicleService.fetch(Vehicle.class, name)
-          .orElseThrow(() -> new ObjectUnknownException("Unknown vehicle: " + name));
+          .orElseThrow(() -> new ObjectUnknownException(UNKNOWN_VEHICLE + name));
 
       vehicleService.updateVehicleIntegrationLevel(
           vehicle.getReference(),
@@ -134,11 +136,11 @@ public class VehicleHandler {
       throws ObjectUnknownException,
         IllegalArgumentException {
     requireNonNull(name, "name");
-    requireNonNull(value, "value");
+    requireNonNull(value, PARAM_VALUE);
 
     executorWrapper.callAndWait(() -> {
       Vehicle vehicle = vehicleService.fetch(Vehicle.class, name)
-          .orElseThrow(() -> new ObjectUnknownException("Unknown vehicle: " + name));
+          .orElseThrow(() -> new ObjectUnknownException(UNKNOWN_VEHICLE + name));
 
       vehicleService.updateVehiclePaused(vehicle.getReference(), Boolean.parseBoolean(value));
     });
@@ -151,7 +153,7 @@ public class VehicleHandler {
 
     executorWrapper.callAndWait(() -> {
       Vehicle vehicle = vehicleService.fetch(Vehicle.class, name)
-          .orElseThrow(() -> new ObjectUnknownException("Unknown vehicle: " + name));
+          .orElseThrow(() -> new ObjectUnknownException(UNKNOWN_VEHICLE + name));
 
       vehicleService.updateVehicleEnvelopeKey(vehicle.getReference(), value);
     });
@@ -161,11 +163,11 @@ public class VehicleHandler {
       throws ObjectUnknownException,
         IllegalArgumentException {
     requireNonNull(name, "name");
-    requireNonNull(value, "value");
+    requireNonNull(value, PARAM_VALUE);
 
     executorWrapper.callAndWait(() -> {
       Vehicle vehicle = vehicleService.fetch(Vehicle.class, name)
-          .orElseThrow(() -> new ObjectUnknownException("Unknown vehicle: " + name));
+          .orElseThrow(() -> new ObjectUnknownException(UNKNOWN_VEHICLE + name));
 
       if (Boolean.parseBoolean(value)) {
         vehicleService.enableCommAdapter(vehicle.getReference());
@@ -182,7 +184,7 @@ public class VehicleHandler {
 
     return executorWrapper.callAndWait(() -> {
       Vehicle vehicle = vehicleService.fetch(Vehicle.class, name)
-          .orElseThrow(() -> new ObjectUnknownException("Unknown vehicle: " + name));
+          .orElseThrow(() -> new ObjectUnknownException(UNKNOWN_VEHICLE + name));
 
       return vehicleService.fetchAttachmentInformation(vehicle.getReference());
     });
@@ -191,11 +193,11 @@ public class VehicleHandler {
   public void putVehicleCommAdapter(String name, String value)
       throws ObjectUnknownException {
     requireNonNull(name, "name");
-    requireNonNull(value, "value");
+    requireNonNull(value, PARAM_VALUE);
 
     executorWrapper.callAndWait(() -> {
       Vehicle vehicle = vehicleService.fetch(Vehicle.class, name)
-          .orElseThrow(() -> new ObjectUnknownException("Unknown vehicle: " + name));
+          .orElseThrow(() -> new ObjectUnknownException(UNKNOWN_VEHICLE + name));
 
       VehicleCommAdapterDescription newAdapter
           = vehicleService.fetchAttachmentInformation(vehicle.getReference())
@@ -210,6 +212,25 @@ public class VehicleHandler {
     });
   }
 
+  public void postVehicleCommAdapterPosition(String name, String position)
+      throws ObjectUnknownException {
+    requireNonNull(name, "name");
+    requireNonNull(position, "position");
+
+    executorWrapper.callAndWait(() -> {
+      Vehicle vehicle = vehicleService.fetch(Vehicle.class, name)
+          .orElseThrow(() -> new ObjectUnknownException(UNKNOWN_VEHICLE + name));
+
+      vehicleService.sendCommAdapterMessage(
+          vehicle.getReference(),
+          new VehicleCommAdapterMessage(
+              "tcs:virtualVehicle:initPosition",
+              Map.of("position", position)
+          )
+      );
+    });
+  }
+
   public void postVehicleCommAdapterMessage(
       String name,
       PostVehicleCommAdapterMessageRequestTO request
@@ -220,7 +241,7 @@ public class VehicleHandler {
 
     executorWrapper.callAndWait(() -> {
       Vehicle vehicle = vehicleService.fetch(Vehicle.class, name)
-          .orElseThrow(() -> new ObjectUnknownException("Unknown vehicle: " + name));
+          .orElseThrow(() -> new ObjectUnknownException(UNKNOWN_VEHICLE + name));
 
       vehicleService.sendCommAdapterMessage(
           vehicle.getReference(),
@@ -242,7 +263,7 @@ public class VehicleHandler {
 
     executorWrapper.callAndWait(() -> {
       Vehicle vehicle = vehicleService.fetch(Vehicle.class, name)
-          .orElseThrow(() -> new ObjectUnknownException("Unknown vehicle: " + name));
+          .orElseThrow(() -> new ObjectUnknownException(UNKNOWN_VEHICLE + name));
 
       vehicleService.updateVehicleAcceptableOrderTypes(
           vehicle.getReference(),
@@ -268,7 +289,7 @@ public class VehicleHandler {
 
     executorWrapper.callAndWait(() -> {
       Vehicle vehicle = vehicleService.fetch(Vehicle.class, name)
-          .orElseThrow(() -> new ObjectUnknownException("Unknown vehicle: " + name));
+          .orElseThrow(() -> new ObjectUnknownException(UNKNOWN_VEHICLE + name));
 
       vehicleService.updateVehicleEnergyLevelThresholdSet(
           vehicle.getReference(),
@@ -293,24 +314,9 @@ public class VehicleHandler {
 
     return executorWrapper.callAndWait(() -> {
       Vehicle vehicle = vehicleService.fetch(Vehicle.class, name)
-          .orElseThrow(() -> new ObjectUnknownException("Unknown vehicle: " + name));
+          .orElseThrow(() -> new ObjectUnknownException(UNKNOWN_VEHICLE + name));
 
-      TCSObjectReference<Point> sourcePointRef;
-      if (request.getSourcePoint() == null) {
-        if (vehicle.getCurrentPosition() == null) {
-          throw new IllegalArgumentException("Unknown vehicle position: " + vehicle.getName());
-        }
-        sourcePointRef = vehicle.getCurrentPosition();
-      }
-      else {
-        Point sourcePoint = vehicleService.fetch(Point.class, request.getSourcePoint())
-            .orElseThrow(
-                () -> new ObjectUnknownException(
-                    "Unknown source point: " + request.getSourcePoint()
-                )
-            );
-        sourcePointRef = sourcePoint.getReference();
-      }
+      TCSObjectReference<Point> sourcePointRef = resolveSourcePoint(vehicle, request);
 
       Set<TCSObjectReference<Point>> destinationPointRefs = request.getDestinationPoints()
           .stream()
@@ -323,40 +329,62 @@ public class VehicleHandler {
           })
           .collect(Collectors.toSet());
 
-      Set<TCSResourceReference<?>> resourcesToAvoid = new HashSet<>();
-
-      if (request.getResourcesToAvoid() != null) {
-        for (String resourceName : request.getResourcesToAvoid()) {
-          Optional<Point> point = vehicleService.fetch(Point.class, resourceName);
-          if (point.isPresent()) {
-            resourcesToAvoid.add(point.get().getReference());
-            continue;
-          }
-
-          Optional<Path> path = vehicleService.fetch(Path.class, resourceName);
-          if (path.isPresent()) {
-            resourcesToAvoid.add(path.get().getReference());
-            continue;
-          }
-
-          Optional<Location> location = vehicleService.fetch(Location.class, resourceName);
-          if (location.isPresent()) {
-            resourcesToAvoid.add(location.get().getReference());
-            continue;
-          }
-
-          throw new ObjectUnknownException("Unknown resource: " + resourceName);
-        }
-      }
-
       return routerService.computeRoutes(
           vehicle.getReference(),
           sourcePointRef,
           destinationPointRefs,
-          resourcesToAvoid,
+          resolveResourcesToAvoid(request),
           maxRoutesPerDestinationPoint
       );
     });
+  }
+
+  private TCSObjectReference<Point> resolveSourcePoint(
+      Vehicle vehicle,
+      PostVehicleRoutesRequestTO request
+  ) {
+    if (request.getSourcePoint() == null) {
+      if (vehicle.getCurrentPosition() == null) {
+        throw new IllegalArgumentException("Unknown vehicle position: " + vehicle.getName());
+      }
+      return vehicle.getCurrentPosition();
+    }
+
+    return vehicleService.fetch(Point.class, request.getSourcePoint())
+        .orElseThrow(
+            () -> new ObjectUnknownException(
+                "Unknown source point: " + request.getSourcePoint()
+            )
+        )
+        .getReference();
+  }
+
+  private Set<TCSResourceReference<?>> resolveResourcesToAvoid(PostVehicleRoutesRequestTO request) {
+    Set<TCSResourceReference<?>> resourcesToAvoid = new HashSet<>();
+
+    if (request.getResourcesToAvoid() == null) {
+      return resourcesToAvoid;
+    }
+
+    for (String resourceName : request.getResourcesToAvoid()) {
+      resourcesToAvoid.add(fetchResourceReference(resourceName));
+    }
+
+    return resourcesToAvoid;
+  }
+
+  private TCSResourceReference<?> fetchResourceReference(String resourceName) {
+    return vehicleService.fetch(Point.class, resourceName)
+        .<TCSResourceReference<?>>map(Point::getReference)
+        .or(
+            () -> vehicleService.fetch(Path.class, resourceName)
+                .map(Path::getReference)
+        )
+        .or(
+            () -> vehicleService.fetch(Location.class, resourceName)
+                .map(Location::getReference)
+        )
+        .orElseThrow(() -> new ObjectUnknownException("Unknown resource: " + resourceName));
   }
 
   private Map<String, String> toParameterMap(List<Property> parameters) {
